<resources>
    <string name="app_name">Story App</string>

    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Mau belajar atau update kegiatan sehari-hari mu di Dicoding Stories, temukan teman dan dapatkan pacar!</string>
    <string name="title_welcome_page">Selamat datang di Dicoding Stories!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Nama</string>
    <string name="copyright">© 2023 Dicoding</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>

    <string name="empty_email">Masukkan email</string>
    <string name="empty_password">Masukkan password</string>
    <string name="empty_name">Masukkan nama</string>

    <string name="password_6">Password tidak boleh kurang dari 8</string>
    <string name="text_home">Home</string>
    <string name="text_profile">Profil</string>
    <string name="text_keluar">Keluar</string>
    <string name="text_lat">lat: </string>
    <string name="lat_simbol">-</string>
    <string name="text_lon">lon:</string>
    <string name="text_camera">KAMERA</string>
    <string name="text_gallery">GALERI</string>
    <string name="text_send">KIRIM</string>
    <string name="text_add_button">Tombol Tambah</string>
    <string name="text_hint_description">Deskripsi</string>
    <string name="desc_stories_photo">Cerita Foto</string>

    <string name="ed_email_err">Menggunakan email yang valid</string>
    <string name="text_map">Map</string>
    <string name="retry">COBA LAGI</string>
    <string name="text_foto">Foto</string>
    <string name="text_lokasi">Lokasi</string>
    <string name="text_dont_have_account">Tidak Punya akun?</string>
</resources>